# ReqMind

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  COMECE_AQUI.md  DOCUMENTACAO_5S.md  Dockerfile  MEMORY.md  Makefile  OTIMIZACAO_PERFORMANCE.md  PLANO_NRS_HIBRIDO.md  PROBLEMAS_RESOLVIDOS.md  README.md  TEST_REPORT_E2E.md  TEST_REPORT_E2E_2026-02-08.md  deploy_config.md  docker-compose.yml  erros.md  fallbacks.py  prompt-inicio-leitura-LLM.md  pyproject.toml  requirements.txt  solucoes-erros.md  teste-pratico-minimo.md  teste-pratico.md  utilitarios.py
docs/: ANALISE_CRITICA_MEMORIA_BRUNO.md  ANALISE_CRITICA_PLANO_IMPLEMENTACAO.md  ANALISE_MENSAGEM_BOAS_VINDAS.md  API_REFERENCE.md  ARCHITECTURE.md  ARQUITETURA_3_CAMADAS_IMPLEMENTADA.md  BROWSERLESS_USO.md  COMECE_AQUI.md  CORRECOES_MEMORIA_IMPLEMENTADAS.md  DEVELOPMENT.md  DOCS_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  FEATURES.md  HIPPOCAMPAI_GUIDE.md  IMPLEMENTACAO_COMPLETA_RESUMO.md  INSIGHTS.md  PLANO_DE_ACAO.md  PLANO_IMPLEMENTACAO_HIPPOCAMPAI.md  PLANO_MELHORIAS_BOT.md  RESUMO_ANALISE_MEMORIA.md  STATUS_ATUAL.md  STATUS_PENDENTE.md  TESTING.md  TOOLS_REFERENCE.md  opencode-nvidia-kimi.example.json  opencode-nvidia-kimi.md  otimizar-kimi-k2.5.md
scripts/: browserless_exemplo.py  feed_nr01.py  feed_nr05.py  feed_nr06.py  feed_nr10.py  feed_nr29_oficial.py  feed_nr29_to_memory.py  feed_nr33.py  feed_nr35.py  fetch_nr_govt.py  health_check.py  nr29_oficial_dou.txt  start.sh  status.sh  stop.sh
src/: agent_setup.py  bot_simple.py  commands.py
tests/: test_bot_completo.py  test_bot_funcionalidades.py  test_bot_simples.py  test_e2e.py  test_e2e_full.py  test_e2e_simple.py  (+4 more)
(+122 files in other folders)
