[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistente-digital"
version = "1.1.0"
description = "Bot Telegram com IA - assistente pessoal com análise de mídia e automação"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Bruno" }]
keywords = ["telegram", "bot", "groq", "llm", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# Lista completa e versionada em requirements.txt (use pip install -r requirements.txt)
dependencies = [
    "python-telegram-bot>=20.7",
    "groq>=0.4.1",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["venv", ".venv", "__pycache__", "build", "dist", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "security", "utils", "workspace", "handlers", "agent_setup", "commands"]
